chore: cleanup redundant array creation